--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 .vscode
 /build
 /tags
+/bbs_testnet_data
 .idea
 .ycm_extra_conf.py
 .ycm_extra_conf.pyc
 Release
 Debug
+testnet.address
+testnet.wallet
